--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=password
-DB_NAME=db-bioskop
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_USER=postgres
+# DB_PASSWORD=password
+# DB_NAME=db-bioskop
+DATABASE_URL=postgresql://postgres:password@containers-xxx.railway.app:5432/railway
