--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@
 # DB_USER=postgres
 # DB_PASSWORD=password
 # DB_NAME=db-bioskop
-DATABASE_URL=postgresql://postgres:password@containers-xxx.railway.app:5432/railway
+DATABASE_URL=postgresql://postgres:RHUrHmieqPRQNneGWavesDxaIIYRyeAF@turntable.proxy.rlwy.net:23967/railway
